# Mimikri

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  THIRDPARTY.md  build.rs  docker-compose.mobile.yml  docker-compose.test.yml  docker-compose.yml  nuclei-config.yaml  package-lock.json  package.json  schema.sql  targets.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
DOCS/: ADR-011-ORCHESTRATOR-DOMAIN.md  ADR-012-AI-CONTEXT-HARDENING.md  ARCHITECTURE.md  PLUGIN_METADATA_AUDIT.md  ROI_ANALYTICS.original.md  ai_infrastructure.md  engine_core.md  plugins_and_tools.md  sink_persistence.md  stealth_opsec.md  swarm_intelligence.md  test_methodology.original.md
DOCS/deployment/: 00_OVERVIEW.md  01_BASE_HARDENING.md  02_BOX1_AI_ENRICHMENT.md  03_BOX2_COORDINATOR.md  04_BOX3_INTEL_OBSERVABILITY.md  05_BOX4_INTERACTSH.md  05_TAILSCALE_MESH.md  06_DO_EPHEMERAL_WORKERS.md  07_DASHBOARD_PUBLIC_ACCESS.md  08_SECRETS_MANAGEMENT.md  09_INCIDENT_RESPONSE.md  10_SMOKE_TEST.md  HYBRID_DEPLOYMENT_TOPOLOGY.md  SECRETS_RUNBOOK_AGE_ED25519.md
benches/: sprint_7_5.rs
config/: programs.json.example
docker/: tools.Dockerfile
migrations/: 20260428000000_initial_pg_schema.sql  20260506000000_distributed_worker_queue.sql  20260508000000_program_targets.sql  20260508000002_temporal_diff_fixes.sql  20260508000003_submitted_reports.sql
src/: lib.rs  main.rs  menu.rs
src/boot/: cli.rs  dashboard.rs  mod.rs  runtime.rs  sink_setup.rs  stealth.rs  targets.rs  telemetry.rs  worker.rs
src/core/: agent.rs  approval_gate.rs  capability_layer.rs  factory.rs  filter.rs  lock_free_sink.rs  middleware.rs  mod.rs  native_scanner.rs  persistence.rs  plugin_loader.rs  reactive_engine.rs  resource_manager.rs  source_analyzer.rs  temporal.rs  tests.rs
src/core/ai/: anthropic.rs  antigravity.rs  azure.rs  base.rs  caveman.rs  claude_code.rs  compressor.rs  gemini.rs  kimi.rs  mod.rs  off_path.rs  ollama.rs  openai.rs  plugin_rag.rs  router.rs  scrubber.rs  traits.rs  types.rs
src/core/blackarch/: bridge.rs  mod.rs  parser.rs  schema.rs
src/core/correlation/: ad_ingestor.rs  analyzer.rs  ingestor.rs  mod.rs
src/core/engine/: app.rs  mod.rs
src/core/mcp/: mod.rs  protocol.rs  sanitizer.rs  server.rs  tests.rs
src/core/notifications/: discord.rs
src/core/orchestrator/: dispatch.rs  enrichment.rs  mod.rs  monitor.rs  reactive.rs  scope_guard.rs
src/core/pipeline/: builder.rs  enrichment.rs  mod.rs
src/core/policy/: mod.rs  scope_syncer.rs
src/core/sandbox/: mod.rs  wasm.rs
src/core/selection/: mod.rs  rubric.rs
src/core/sink/: bounty.rs  bounty_draft.rs  buffered.rs  jsonl.rs  markdown.rs  mod.rs  nats_sink.rs  postgres.rs  timeline.rs  webhook.rs
src/core/skills/: mod.rs
src/core/validation/: executor.rs  generator.rs  mod.rs  remote.rs  sovereign.rs
src/core/verification/: interaction.rs  mod.rs  pipeline.rs
src/core/waf/: engine.rs  mod.rs  policy.rs  profiles.rs
src/infrastructure/: certstream.rs  digital_ocean.rs  mod.rs  proxy_tests.rs
src/models/: constants.rs  engagement.rs  export.rs  mod.rs  objectives.rs  objectives_tests.rs  scan_result.rs  spill.rs
src/plugins/: config.rs  discovery_factory.rs  ffi.rs  mod.rs  registry.rs  scanner_factory.rs
src/utils/: activity_log.rs  api_budget.rs  api_cache.rs  bounty_exporter.rs  common.rs  config.rs  cve_cache.rs  cvss.rs  deduplication.rs  downloader.rs  executor.rs  hardware_detection.rs  ja4.rs  jitter.rs  liveness.rs  memory_monitor.rs  mod.rs  output_filter.rs  payload_server.rs  poc_generator.rs  process_guard.rs  program_config.rs  proxy.rs  report_gen.rs  security.rs  shodan_keyring.rs  stealth_detect.rs  stealth_http.rs  telemetry.rs  tone.rs  tool_detection.rs  transport.rs
tests/: boot_singletons_test.rs  lateral_movement_test.rs  monitor_lifecycle_test.rs  reactive_integration_test.rs  swarm_acl_test.rs  tls_impersonation_test.rs
tests/baselines/: golden_baseline.json
tools/: README.md
tools/crackql/: CrackQL.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+249 files in other folders)
