[package]
name = "mimikri"
version = "0.1.0"
edition = "2021"
authors = ["kripiman <kripiman@users.noreply.github.com>"]
description = "High-performance async red team assessment engine with 70+ plugins"
license = "AGPL-3.0-or-later"
repository = "https://github.com/kripiman/mimikri"
homepage = "https://github.com/kripiman/mimikri"
readme = "README.md"
keywords = ["security", "redteam", "osint", "pentesting"]
categories = ["command-line-utilities"]

[dependencies]
# Async Runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
url = "2.4"
regex = "1.9"
rand = "0.8"
rand_distr = "0.4"
quick-xml = { version = "0.31", features = ["serialize"] }
dashmap = "5.5"
moka = { version = "0.10", features = ["future"] }
arc-swap = "1.7"
crossbeam = "0.8"
bloomfilter = "1.0"
which = "4.4"
hickory-resolver = { version = "0.24", features = ["tokio-rustls", "system-config", "dns-over-https-rustls", "webpki-roots"] }
html-escape = "0.2"
urlencoding = "2.1"
dirs = "5.0.1"
addr = "0.15"

# Network
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip", "stream", "socks", "multipart"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# CLI & Interface
clap = { version = "4.3", features = ["derive"] }
indicatif = "0.17" # Progress bars
inquire = "0.6"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # Added json feature
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tower = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"
tlsh-fixed = "0.1"
rsa = "0.9"
x509-parser = "0.15"
wasmi = "0.31"
wreq = { version = "5.3.0", optional = true }
wreq-util = { version = "2.2.6", optional = true }
tls-parser = "0.11"



# Files & Templating
tempfile = "3.8"
walkdir = "2.3"
handlebars = "4.3"
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
once_cell = "1.21.3"
rustix = { version = "1.1.3", features = ["process"] }
libc = "0.2.182"
async-stream = "0.3.6"
dotenv = "0.15.0"
libloading = "0.9.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros", "json"] }
sysinfo = "0.30.5"
flate2 = "1.0.28"
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
rust-embed = "8.4"
tokio-stream = { version = "0.1", features = ["io-util"] }
mime_guess = "2.0"



# WebSocket (CertStream daemon)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Networking & High Performance
io-uring = "0.7"
smoltcp = { version = "0.11", features = ["socket-tcp", "socket-raw", "socket-udp"] }
siphasher = "0.3"
aya = "0.13"
socket2 = "0.5"
tokio-socks = "0.5.2"
zip = "8.5.1"
cvss = "2.2.0"
toml = "1.1.2"
async-nats = "0.35"
hmac = "0.12.1"

# Persistence & Swarm
# RocksDB and Chitchat removed as they were not used in the final v4.0 architecture and caused build failures.

[features]
default = ["bug-bounty"]
bug-bounty = []
ai-redteam = ["bug-bounty"]
mobile = ["bug-bounty"]
sovereign = ["bug-bounty", "mobile", "ai-redteam"]
tls-impersonation = ["wreq", "wreq-util"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true # Strip symbols for smaller binary

[dev-dependencies]
wiremock = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sprint_7_5"
harness = false

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
